<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.timer.IssueTimerActivity">

    <ImageButton
        android:id="@+id/issue_timer_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_back"
        android:background="@color/white"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/issue_timer_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/rubik_medium"
        android:maxEms="10"
        android:maxLines="2"
        android:text="@string/issue_summary_filler"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintRight_toLeftOf="@+id/issue_timer_status"
        app:layout_constraintLeft_toRightOf="@+id/issue_timer_back_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/issue_timer_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:text="@string/issue_status_filler"
        android:fontFamily="@font/rubik_regular"
        android:textSize="12sp"
        android:background="@drawable/issues_item_desc_shape"
        android:textColor="@color/red"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/issue_timer_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="10dp"
        android:fontFamily="@font/rubik_regular"
        android:maxLines="5"
        android:text="@string/issue_desc_filler"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/issue_timer_summary"
        tools:layout_editor_absoluteX="15dp" />

    <com.example.omegatracker.customDrawables.CustomProgressBar
        android:id="@+id/issue_timer_progressbar"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginVertical="25dp"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintTop_toBottomOf="@id/issue_timer_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/issue_timer_progressbar_timer_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"

        android:text="@string/zero_timer"
        app:layout_constraintTop_toTopOf="@id/issue_timer_progressbar"
        app:layout_constraintBottom_toBottomOf="@id/issue_timer_progressbar"
        app:layout_constraintLeft_toLeftOf="@id/issue_timer_progressbar"
        app:layout_constraintRight_toRightOf="@id/issue_timer_progressbar" />

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/issue_timer_progressbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:id="@+id/start_btn_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/issue_timer_start_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/play_icon"
                android:layout_marginHorizontal="25dp"
                android:background="@drawable/issue_timer_btn_shape" />

            <TextView
                android:id="@+id/issue_timer_start_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/issue_timer_start_text"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/issue_timer_start_btn"
                app:layout_constraintStart_toStartOf="@id/issue_timer_start_btn"
                app:layout_constraintEnd_toEndOf="@id/issue_timer_start_btn" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pause_btn_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/issue_timer_pause_btn"
                android:visibility="gone"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="50dp"
                android:layout_marginHorizontal="25dp"
                android:src="@drawable/pause_icon"
                android:background="@drawable/issue_timer_btn_shape"
                app:layout_constraintRight_toLeftOf="@id/issue_timer_start_btn"
                app:layout_constraintTop_toBottomOf="@id/issue_timer_progressbar" />

            <TextView
                android:id="@+id/issue_timer_pause_text"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/issue_timer_pause_text"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/issue_timer_pause_btn"
                app:layout_constraintStart_toStartOf="@id/issue_timer_pause_btn"
                app:layout_constraintEnd_toEndOf="@id/issue_timer_pause_btn" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/stop_btn_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/issue_timer_stop_btn"
                android:visibility="gone"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/stop_icon"
                android:layout_marginHorizontal="25dp"
                android:background="@drawable/issue_timer_btn_shape"
                app:layout_constraintTop_toBottomOf="@id/issue_timer_progressbar"
                app:layout_constraintLeft_toRightOf="@id/issue_timer_start_btn" />

            <TextView
                android:id="@+id/issue_timer_stop_text"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/issue_timer_stop_text"
                app:layout_constraintTop_toBottomOf="@id/issue_timer_stop_btn"
                app:layout_constraintStart_toStartOf="@id/issue_timer_stop_btn"
                app:layout_constraintEnd_toEndOf="@id/issue_timer_stop_btn" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>